[gd_scene load_steps=10 format=3 uid="uid://sdut3voj6e6k"]

[ext_resource type="Script" path="res://scripts/objetos/puerta.gd" id="1_1gytr"]
[ext_resource type="Texture2D" uid="uid://dw3x8oq6trwqt" path="res://assets/objetos/puerta_abierta.svg" id="1_2v3op"]
[ext_resource type="Texture2D" uid="uid://bkuhpaitwuv5c" path="res://assets/objetos/puerta.svg" id="2_mresp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_04ckn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vyyld"]
atlas = ExtResource("1_2v3op")
region = Rect2(0, 0, 737, 363)

[sub_resource type="AtlasTexture" id="AtlasTexture_wysyy"]
atlas = ExtResource("2_mresp")
region = Rect2(0, 0, 735, 161)

[sub_resource type="SpriteFrames" id="SpriteFrames_owkf3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyyld")
}],
"loop": true,
"name": &"puerta_abierta",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wysyy")
}],
"loop": true,
"name": &"puerta_cerrada",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvph6"]
size = Vector2(427, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pdjvg"]
size = Vector2(127, 428)

[node name="puerta" type="StaticBody2D"]
collision_layer = 8
script = ExtResource("1_1gytr")

[node name="puerta_cerrada" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_04ckn")
position = Vector2(2, 46)
scale = Vector2(0.590062, 0.590062)
sprite_frames = SubResource("SpriteFrames_owkf3")
animation = &"puerta_cerrada"
autoplay = "puerta_cerrada"

[node name="Collision_puerta_cerrada" type="CollisionShape2D" parent="."]
position = Vector2(2, 25)
shape = SubResource("RectangleShape2D_wvph6")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 15
collision_mask = 3

[node name="CollisiondetectionArea" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, 12)
rotation = 1.5708
shape = SubResource("RectangleShape2D_pdjvg")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
